<resources>
    <string name="app_name">ToDoList</string>
    <string name="edit_reminder_title">Task Reminder - Edit</string>
    <string name="action_settings">Settings</string>
    <string name="finished">Done</string>
    <string name="title">Add a task</string>
    <string name="message">What do you want to do?</string>
    <string name="newItem">New Text</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="body">Body</string>
    <string name="date">Reminder Date</string>
    <string name="time">Reminder Time</string>
    <string name="confirm">Save</string>
    <string name="reset">Reset</string>
    <string name="done">Done</string>


    <!-- Toasts -->
    <string name="task_saved_message">Task has been saved</string>
    <string name="task_reset">All Fields have been reset</string>

    <string name="task_returned">Returning to Main Screen</string>


    <string name="itemPicked">list item selected was</string>



    <!--menu -->
    <string name="menu_insert">Add Reminder</string>
    <string name="menu_delete">Delete Reminder</string>
    <string name="menu_settings">Settings</string>

    <!-- Preferences -->
    <string name="pref_category_task_defaults_key">task_default_category</string>
    <string name="pref_category_task_defaults_title">Task Title Default</string>
    <string name="pref_task_title_key">default_reminder_title</string>
    <string name="pref_task_title_dialog_title">Default Reminder Title</string>
    <string name="pref_task_title_message">The default title for a reminder.</string>
    <string name="pref_task_title_summary">Default title for reminders.</string>
    <string name="pref_task_title_title">Default Reminder Title</string>

    <string name="pref_category_datetime_key">date_time_default_category</string>
    <string name="pref_category_datetime_title">Date Time Defaults</string>
    <string name="pref_default_time_from_now_key">time_from_now_default</string>
    <string name="pref_default_time_from_now_dialog_title">Time From Now</string>
    <string name="pref_default_time_from_now_message">The default time from now that a new reminder should be set to.</string>
    <string name="pref_default_time_from_now_summary">Sets the default time for a reminder.</string>
    <string name="pref_default_time_from_now_title">Default Reminder Time</string>

</resources>
