<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"

	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:title="@string/app_name"
	android:background="#f5e85c"
	>

<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="fill_parent">
	<LinearLayout	
		android:orientation="vertical" 
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:backgroundTint="#e9cb0e" >
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/title" />
		<EditText android:id="@+id/title" 
		  android:layout_width="fill_parent"
			android:layout_height="wrap_content" 	/>
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/body" />
		<EditText android:id="@+id/body" android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:minLines="5"
			android:scrollbars="vertical" 
			android:gravity="top" />
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/date" />
		<Button 
			android:id="@+id/reminder_date"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"	/>
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/time" />
		<Button 
			android:id="@+id/reminder_time"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"	/>

		<Switch
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Not Done"
			android:id="@+id/switch1" />




	</LinearLayout>
</ScrollView>

	<Button android:id="@+id/cancel_action"
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"/>

	<Button android:id="@+id/reset"
        android:text="@string/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"/>

	<Button android:id="@+id/confirm"
		android:text="@string/confirm"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom" />


</LinearLayout >